# RNN-forecast

./: .env.example  .gitignore  CONTRIBUTING.md  DeepAR Forecasting Machine Learning manual.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  quickstart.py  run_app.py
src/deepar_forecast/app_api/: main.py  schemas.py
src/deepar_forecast/app_ui/: main.py  main_backtest.py  plot_helpers.py
src/deepar_forecast/data/: storage.py
src/deepar_forecast/features/: engineering.py
src/deepar_forecast/models/: rnn_regressor.py
src/rnn_forecast/: __init__.py
src/rnn_forecast/app_api/: main.py
src/rnn_forecast/app_ui/: __init__.py  main.py  main_backtest.py
src/rnn_forecast/backtest/: __init__.py  engine.py
src/rnn_forecast/data/: __init__.py  providers.py
src/rnn_forecast/evaluation/: __init__.py  metrics.py
src/rnn_forecast/features/: __init__.py
src/rnn_forecast/models/: __init__.py  base.py  training.py
