[tool.poetry]
name = "rnn-forecast"
version = "0.2.0"
description = "Production-grade crypto/ETF forecasting with a deterministic RNN regressor and Huber loss"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "deepar_forecast", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
streamlit = "^1.28.0"
plotly = "^5.17.0"
sqlalchemy = "^2.0.0"
ccxt = "^4.1.0"
yfinance = "^0.2.31"
statsmodels = "^0.14.0"
arch = "^6.2.0"
ta = "^0.11.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^23.10.0"
mypy = "^1.6.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
